--- a/CSS15/index.html
+++ b/CSS15/index.html
@@ -13,10 +13,10 @@
         }
         h1{
             background-color: aquamarine;
-            /* border-style: dotted;
+            border-style: dotted;
             border-width: 2px;
-            border-color: brown; */
-            /* border:solid brown 5px; */
+            border-color: brown;
+            border:solid brown 5px;
 
             /* border-top-left-radius: 5px; */
             /* border-bottom: solid black 5px; */
@@ -43,15 +43,15 @@
             border: solid black 3px;
             border-radius: 10px;
             width: 350px;
-            /* padding: 90px; */
-            /* padding-top: 20px;
+            padding: 90px;
+            padding-top: 20px;
             padding-right: 30px;
             padding-bottom: 40px;
-             */
+            
             /* padding: 15px 25px 35px 45px; */
             /* padding: 20px 40px; */
 
-            /* margin: 40px; */
+            margin: 40px;
             /* margin-top: 100px; */
         }
 
@@ -73,13 +73,13 @@
     </style>
 </head>
 <body>
-    <!-- <h1>
+    <h1>
           Welcome to codehelp
     </h1>
 
     <span>
          welcome to nothing course
-    </span> -->
+    </span>
 
     <p class="firstpara">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum reprehenderit cupid
