--- a/CSS19/one.html
+++ b/CSS19/one.html
@@ -8,6 +8,7 @@
     <style>
         .box{
             border: 1px solid black;
+            overflow: auto;
         }
 
         .item{
@@ -15,6 +16,7 @@
             height: 200px;
             margin: 2px;
             background-color: aquamarine;
+            float: left;
         }
     </style>
 <body>
