--- a/CSS19/one.html
+++ b/CSS19/one.html
@@ -14,21 +14,21 @@
         .item{
             width: 200px;
             height: 200px;
-            margin: 2px;
+            margin: 10px;
             background-color: aquamarine;
             border: 1px solid black;
         }
         #item1{
-            float: right;
+            float:left;
         }
 
     
         #item2{
-            float: right;
+            float: left;
         }
         
         #item3{
-            float: right;
+            float: left;
         }
 
     </style>
