--- a/CSS16/index.html
+++ b/CSS16/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS16</title>
     <style>
 
         *{
@@ -16,7 +16,7 @@
             /* display: inline; */
             width: 300px;
             height: 300px;
-            border: 1px solid black;
+            border: 1px solid blueviolet;
             padding: 20px;
         }
 
