--- a/CSS15/index.html
+++ b/CSS15/index.html
@@ -7,10 +7,10 @@
 
     <style>
 
-        *{
+        /* *{
             padding: 0;
             margin: 0;
-        }
+        } */
         h1{
             background-color: aquamarine;
             border-style: dotted;
@@ -18,8 +18,8 @@
             border-color: brown;
             border:solid brown 5px;
 
-            /* border-top-left-radius: 5px; */
-            /* border-bottom: solid black 5px; */
+            border-top-left-radius: 5px;
+            border-bottom: solid black 5px;
 
             border: solid black 3px;
             border-radius: 50px;
@@ -32,8 +32,8 @@
             background-color: aquamarine;
             border: solid black 3px;
             border-radius: 50px;
-            /* width: 350px;
-            height: 30px; */ 
+            width: 350px;
+            height: 30px; 
             /* span me height width km nhi krta ku Homework h */
 
         }
@@ -48,7 +48,7 @@
             padding-right: 30px;
             padding-bottom: 40px;
             
-            /* padding: 15px 25px 35px 45px; */
+            padding: 15px 25px 35px 45px;
             /* padding: 20px 40px; */
 
             margin: 40px;
