--- a/lecture7/table.html
+++ b/lecture7/table.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>table</title>
 </head>
 <body>
 
-    <table border="5">
+    <table border="10">
 
         <thead>
             <th>Student Id</th>
@@ -20,8 +20,8 @@
         <tbody>
             <tr>
               <td>1234</td>
-              <td>Bill</td>
-              <td>Male</td>
+              <td>Barbie</td>
+              <td>Female</td>
               <td>18</td>
 
             </tr>
