--- a/CSS23/index.html
+++ b/CSS23/index.html
@@ -23,6 +23,24 @@
             border: 5px solid yellow;
             border-radius: 10px;
             margin: 10px;
+            position: relative;
+            animation-name: rightMovement;
+            animation-duration: 5s;
+            animation-iteration-count: 2;
+            animation-delay: 1s;
+            animation-timing-function: ease-in;
+
+        }
+        @keyframes rightMovement {
+            from{
+                top: 0;
+                left: 0;
+            }
+
+            to{
+                top: 0;
+                left: 1200px;
+            }
         }
     </style>
 </head>
