--- a/CSS24/index.html
+++ b/CSS24/index.html
@@ -11,16 +11,21 @@
             width: 400px;
             background-color: beige;
             border: 2px solid black;
-            
-            transition-property: width;
+
+            /* transition-property: all;
             transition-duration: 4s;
             transition-delay: 1s;
-            transition-timing-function: linear;
+            transition-timing-function: linear; */
+
+            /* shorthand notation */
+            transition: all 2s ease-in;
 
         }
 
         .box:hover{
-            width: 1200px;
+            width: 1800px;
+            height: 900px;
+            background-color: blue;
         }
     </style>
 </head>
