--- a/CSS16/index.html
+++ b/CSS16/index.html
@@ -40,13 +40,13 @@
     </style>
 </head>
 <body>
-    <!-- <div>
+    <div>
         wlcome to nothing
     </div>
 
     <div>
         wlcome to nothing 2.0
-    </div> -->
+    </div>
 
     <div class="box">
         welcome to nothing
