--- a/lecture10/resumeproject.html
+++ b/lecture10/resumeproject.html
@@ -9,7 +9,7 @@
     <div>
       
         <div>
-            <h1>Akshat Raj</h1>
+            <h1>Anshu Raja</h1>
             <p>contact: <a href="abccd.com">akshatraj1561@gmail.com</a></p>
             <p>Linkdin: <a href="abccd.com">www.linkedin.com/in/akshat-raj-556b0b259</a></p>
 
