--- a/CSS16/index.html
+++ b/CSS16/index.html
@@ -21,7 +21,7 @@
         }
 
         span{
-            border: 2px solid green;
+            border: 2px solid orchid;
             width: 200px;
             height: 200px;
             margin: 5px;
