--- a/CSS16/index.html
+++ b/CSS16/index.html
@@ -21,11 +21,11 @@
         }
 
         span{
-            border: 2px solid orchid;
+            border: 2px solid blueviolet;
             width: 200px;
             height: 200px;
-            margin: 5px;
-            padding: 5px;
+            margin: 10px;
+            padding: 10px;
             display: inline-block;
             /* display: block; */
         }
