--- a/lecture 11/index.html
+++ b/lecture 11/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <img src="IMG11.webp" alt="NICCO IMG" width="100" height="100">
+    <img src="img12.avif" alt="NICCO IMG" width="100" height="100">
     
     <audio src="audio11.mp3" controls></audio>
 
