--- a/lecture 11/media.html
+++ b/lecture 11/media.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media</title>
 </head>
 <body>
     <header>
@@ -13,7 +13,7 @@
     <table>
         <tr>
             <td>
-                <img src="IMG11.webp" alt="MYSELF" width="100" height="100">
+                <img src="img12.avif" alt="MYSELF" width="100" height="100">
             </td>
             <td>
                 <nav>
