--- a/CSS26/index.html
+++ b/CSS26/index.html
@@ -38,7 +38,7 @@
                     <h2>Gulab Jamun</h2>
                     <div>
                         <h2>Ingridents</h2>
-                        <ul>
+                        <ul class="ingbox">
                             <li>sugar</li>
                             <li>bread</li>
                             <li>oil</li>
@@ -47,7 +47,7 @@
 
                     <div>
                         <h2>Recipe</h2>
-                        <ol>
+                        <ol class="recipebox">
                             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum,
                                  laborum.</li>
                             <li>Lorem ipsum dolor sit.</li>
@@ -63,7 +63,11 @@
                 </div>
 
                 <div class="rightbox">
-                   <img src="gulabJamun.jpg" />
+                   <img src="gulabJamun.jpg" 
+                   />
+                   <div class="overlay">
+                    <span> click here to Buy</span>
+                   </div>
 
                 </div>
               </div>
