--- a/CSS24/index.html
+++ b/CSS24/index.html
@@ -25,7 +25,7 @@
         .box:hover{
             width: 1800px;
             height: 900px;
-            background-color: blue;
+            background-color:yellow;
         }
     </style>
 </head>
