--- a/CSS24/index.html
+++ b/CSS24/index.html
@@ -9,7 +9,7 @@
         .box{
             height: 400px;
             width: 400px;
-            background-color: beige;
+            background-color: pink;
             border: 2px solid black;
 
             /* transition-property: all;
