--- a/CSS17/index.html
+++ b/CSS17/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>position property</title>
 
     <style>
         div{
-            border: 10px solid red;
+            border: 20px solid orangered;
         }
         img{
             margin: 10px;
