--- a/CSS19/one.html
+++ b/CSS19/one.html
@@ -7,7 +7,7 @@
 </head>
     <style>
         .box{
-            border: 1px solid black;
+            border: 1px solid blue;
             overflow: auto;
         }
 
@@ -15,8 +15,8 @@
             width: 200px;
             height: 200px;
             margin: 10px;
-            background-color: aquamarine;
-            border: 1px solid black;
+            background-color: yellowgreen;
+            border: 1px solid blue;
         }
         #item1{
             float:left;
