--- a/CSS14/index.html
+++ b/CSS14/index.html
@@ -20,7 +20,7 @@
         }
         #firstpara{
             background-color: rgb(172, 172, 18);
-            color: brown;
+            color: yellow;
         }
         #secondpara{
             background-color: rgb(54, 17, 105);
