--- a/CSS15/index.html
+++ b/CSS15/index.html
@@ -57,14 +57,14 @@
 
         .secondpara{
             background-color: beige;
-            border: solid black 3px;
+            border: solid blueviolet 3px;
             border-radius: 10px;
             width: 350px;
         }
 
         .thirdpara{
             background-color: yellow;
-            border: solid black 3px;
+            border: solid blueviolet 3px;
             border-radius: 10px;
             width: 350px;
         }
